--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-Hello, World!
-
-This is a short paragraph. 
+<h1>Hello, World!<h1>
+<h2>Hello, World!<h2>
+<h3>Hello, World!<h3>
+<h4>Hello, World!<h4>
+<h5>Hello, World!<h5>
+<h6>Hello, World!<h6>
+  
+  <p>This is a short paragraph. </p>
