--- a/index.html
+++ b/index.html
@@ -6,3 +6,8 @@
 <h6>Hello, World!<h6>
   
   <p>This is a short paragraph. </p>
+
+<h1>Support Small Businesses<h1>
+  
+<h2>restaurants in Boston<h2>
+  https://www.phinista.com/
