--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<h1>Hello, World!<h1>
-<h2>Hello, World!<h2>
-<h3>Hello, World!<h3>
-<h4>Hello, World!<h4>
-<h5>Hello, World!<h5>
-<h6>Hello, World!<h6>
-  
-  <p>This is a short paragraph. </p>
-
 <h1>Support Small Businesses<h1>
   
-<h2>restaurants in Boston<h2>
-  https://www.phinista.com/
+  <h2>Restaurants in Boston<h2>
+    <h3>https://www.phinista.com/<h3>
