--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <h2>Restaurants in Boston<h2>
   Phiniste 
 <h3>https://www.phinista.com/<h3>
-96 Peterbough St, Boston, MA 02215
+<h3>96 Peterbough St, Boston, MA 02215<h3>
   
   
