--- a/index.html
+++ b/index.html
@@ -5,4 +5,12 @@
 <h3>https://www.phinista.com/<h3>
 <h3>96 Peterbough St, Boston, MA 02215<h3>
   
-  
+  <!DOCTYPE html>
+<html lang="en_UK">
+<head>
+        <meta charset="UTF-8">
+        <title>My Super Page</title>
+
+        <meta name="robots" content="index,follow" />
+        <link rel="stylesheet" href="css/style.css">
+</head>
