--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <h1>Support Small Businesses<h1>
   
-<h2>Restaurants in Boston<h2>
-  Phiniste 
-<h3>https://www.phinista.com/<h3>
+<h2>Restaurants in Boston<h2> 
+  <link rel= "phiniste" href= "https://www.phinista.com/" />
 <h3>96 Peterbough St, Boston, MA 02215<h3>
   
   
-<link rel="stylesheet" href="css/style.css">
+
