--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
   
 <h2>Restaurants in Boston<h2> 
   
-  <a href="https://www.phinista.com/">Phiniste</a>
-<h3>96 Peterbough St, Boston, MA 02215<h3>
+ <a href="https://www.phinista.com/">Phiniste</a>
+  <a href="https://www.phinista.com/"Phiniste</a>
   
-  
-
