--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <h1>Support Small Businesses<h1>
+ <h2>Restaurants in Boston<h2> 
+  <link rel="Phinista" href="https://www.phinista.com/>
   
-<h2>Restaurants in Boston<h2> 
+
+    
+    <h3>96 Peterbough St, Boston, MA 02215<h3>
   
- <a href="https://www.phinista.com/">Phiniste</a>
-  <a href="https://www.phinista.com/"Phiniste</a>
   
