--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <h1>Support Small Businesses<h1>
  <h2>Restaurants in Boston<h2> 
-  <link rel="Phinista" href="https://www.phinista.com/>
+  1.) <link rel="Phinista" href="https://www.phinista.com/>
   
-
-    
-    <h3>96 Peterbough St, Boston, MA 02215<h3>
+<head>
+ <h3>96 Peterbough St, Boston, MA 02215<h3>
   
   
