--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Support Small Businesses<h1>
  <h2>Restaurants in Boston<h2> 
-  1.) <link rel="Phinista" href="https://www.phinista.com/>
+  <link rel="Phinista" href="https://www.phinista.com/>
   
 <head>
  <h3>96 Peterbough St, Boston, MA 02215<h3>
