--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Support Small Businesses<h1>
  <h2>Restaurants in Boston<h2> 
   <link rel="Phinista" href="https://www.phinista.com/>
+  <link rel="Phinista" href="https://www.phinista.com/>
  
