--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<h1>Support Small Businesses<h1>
- <h2>Restaurants in Boston<h2> 
-  <link rel="Phinista" href="https://www.phinista.com/>
+<!DOCTYPE html>
+<html>
+ <head>
   
-96 PETERBOUGH ST, BOSTON, MA 02215
+ </head>
+ <body>
+  <h1><b>Support Small Businesses</b><h1>
+  <h2>Restaurants in Boston<h2> 
+  <link rel="Phinista" href="https://www.phinista.com/>
+ </body>
+</html>
+
+
+  
