--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
  <head>
-  
- </head>
+   <meta cahrset="utf-8">
+   <meta name="viewpoint" content="width=device-width, initial-scale=1"
+ </head> 
  <body>
-  <h1><b>Support Small Businesses</b><h1>
+  <h1>Support Small Businesses<h1>
   <h2>Restaurants in Boston<h2> 
   <link rel="Phinista" href="https://www.phinista.com/>
  </body>
