--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html>
- <head>
-   <meta cahrset="utf-8">
-   <meta name="viewpoint" content="width=device-width, initial-scale=1"
-         <title>Support Small Businesses</title>
- </head> 
+</head> 
  <body>
   <h1>Support Small Businesses<h1>
   <h2>Restaurants in Boston<h2> 
    
   <link rel="Phinista" href="https://www.phinista.com/>
-  <h3><p> Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista. The combinations of natural flavores and colors with coffee and tea based drinks elevates your otherwise basic caffeinated drinks to another level.</p>
+  <p> Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   
  </body>
 </html>
