--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
+<!DOCTYPE html>
+<html>
+ <head>
+   <meta cahrset="utf-8">
+   <meta name="viewpoint" content="width=device-width, initial-scale=1"
+   <title>Support Small Businesses</title>
 </head> 
  <body>
   <h1>Support Small Businesses<h1>
   <h2>Restaurants in Boston<h2> 
-   
   <link rel="Phinista" href="https://www.phinista.com/>
   <p> Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
-  
  </body>
 </html>
 
