--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
    <meta name="viewpoint" content="width=device-width, initial-scale=1"
    <title>Support Small Businesses</title>
 </head> 
- <body>
+<body>
   <h1>Support Small Businesses<h1>
   <h2>Restaurants in Boston<h2> 
-  <link rel="Phinista" href="https://www.phinista.com/>
+  <h3>Phinista<h3>
+ 
   <p> Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
  </body>
 </html>
