--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <h2>Restaurants in Boston<h2> 
   <h3>Phinista<h3>
   <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
-  <br>
+  <h3>96 Peterborough St, Boston, MA 02215<h3> 
+   <a> href="https://www.phinista.com/">Phinista</a>
+   <br>
+   
   <h3>Cafe Landwer<h3>
+  <p> 
  </body>
 </html>
 
