--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h3>Phinista<h3>
   <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
-   <a> href="https://www.phinista.com/">Phinista</a>
+   <a href="https://www.phinista.com/">Phinista</a>
    <br>
    
   <h3>Cafe Landwer<h3>
