--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <body>
   <h1>Support Small Businesses<h1>
   <h2>Restaurants in Boston<h2> 
+  <img> src="https://images.squarespace-cdn.com/content/v1/5d2cf499669038000114edd1/1607649439329-2G5UHLUPOFWTYTQX83OJ/ke17ZwdGBToddI8pDm48kLkXF2pIyv_F2eUT9F60jBl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0iyqMbMesKd95J-X4EagrgU9L3Sa3U8cogeb0tjXbfawd0urKshkc5MgdBeJmALQKw/fav.jpg?format=750w">
   <a href="https://www.phinista.com/">Phinista</a>
   <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h4>96 Peterborough St, Boston, MA 02215<h4> 
-  
-   <br>
-   
+    <br>
   <a href=https://www.landwercafe.com/">Cafe Landwer</a>
   <p> 
  </body>
