--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
    
 </head> 
 <body>
-  <h1>Support Small Businesses<h1>
+  <h1>Places to visit in Boston<h1>
     <br>
-  <h2>Restaurants in Boston<h2>
+  <h2>Restaurants<h2>
     <br>
   <h3> <h3>
   <a href="https://www.phinista.com/">Phinista</a>
