--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
     <br>
-  <a href=https://www.landwercafe.com/">Cafe Landwer</a>
-                                     
-  <p> 
+  <a href=https://www.landwercafe.com/">Cafe Landwer</a>                                   
+  <p> A small romantic coffee house that quickly turned into a local restaurant chain and franchise.
  </body>
 </html>
 
