--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
     <br>
   <a href=https://www.landwercafe.com/">Cafe Landwer</a>                                   
-  <p> A small romantic coffee house that quickly turned into a local restaurant chain and franchise.</p>
+  <p> A small romantic coffee house that quickly turned into a local restaurant chain and franchise. A fast-casual dining experience.</p>
  </body>
 </html>
 
