--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    
 </head> 
 <body>
-  <h1>Places to visit in Boston<h1>
+  <h1>Audrey's List of Places to visit in Boston<h1>
   <h2>Restaurants<h2>
   <h3> <h3>
   <a href="https://www.phinista.com/">Phinista</a>
