--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head> 
 <body>
   <h1>Audrey's List of Places to visit in Boston<h1>
+  <h2>Support Local Businesses!!<h2>
   <h2>Restaurants<h2>
   <h3> <h3>
   <a href="https://www.phinista.com/">Phinista</a>
@@ -17,7 +18,7 @@
   <p> A small romantic coffee house that quickly turned into a local restaurant chain and franchise. A fast-casual dining experience offering Mediterranean breakfast, lunch, and dinner.</p>
   <h3> 900 Beacon St, Boston, MA 02215  
     <br>
-    <a href=https://www.santouka.co.jp/en">Santouka Ramen</a>
+  <a href=https://www.santouka.co.jp/en">Santouka Ramen</a>
   <p> 
                                        
  </body>
