--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <p> A small romantic coffee house that quickly turned into a local restaurant chain and franchise. A fast-casual dining experience offering Mediterranean breakfast, lunch, and dinner.</p>
   <h3> 900 Beacon St, Boston, MA 02215  
     <br>
-  <a href=https://www.santouka.co.jp/en">Santouka Ramen</a>
-  <p> 
+  <a href=https://www.uvidashop.com/">Uvida SHop</a>
+  <p> Boston's first zero waste shop.
+  <h3>28 Atlantic Avenue North End, Boston, MA 02110
                                        
  </body>
 </html>
