--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    
 </head> 
 <body>
-  <h1>Audrey's List of Places to visit in Boston<h1>
+  <h1>Places to visit in Boston<h1>
   <h2>Support Local Businesses!!<h2>
   <h2>Restaurants<h2>
   <h3> <h3>
@@ -14,10 +14,13 @@
   <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
     <br>
+   
   <a href=https://www.landwercafe.com/">Cafe Landwer</a>                                   
   <p> A small romantic coffee house that quickly turned into a local restaurant chain and franchise. A fast-casual dining experience offering Mediterranean breakfast, lunch, and dinner.</p>
   <h3> 900 Beacon St, Boston, MA 02215  
     <br>
+                                       
+  <h2>Shops<h2>                                     
   <a href=https://www.uvidashop.com/">Uvida SHop</a>
   <p> Boston's first zero waste shop.
   <h3>28 Atlantic Avenue North End, Boston, MA 02110
