--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
   <h3> 900 Beacon St, Boston, MA 02215  
     <br>
                                        
+  <a href=https://www.meimeiboston.com/">Mei Mei</a>                                   
+  <p> A sibling-founded restaurant and food truck catering business serving up creative Chinese-American cuisine made from locally sourced and sustainable ingredients.</p>
+  <h3> 506 Park Drive, Boston, MA 02215  
+    <br>
+   
   <h2>Shops<h2>
   <h3> <h3>                                     
-  <a href=https://www.uvidashop.com/">Uvida SHop</a>
+  <a href=https://www.uvidashop.com/">Uvida Shop</a>
   <p> Boston's first zero waste shop.
   <h3>28 Atlantic Avenue North End, Boston, MA 02110
                                        
