--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
     <br>
    
-  <a href=https://www.landwercafe.com/">Cafe Landwer</a>                                   
-  <p> A small romantic coffee house that quickly turned into a local restaurant chain and franchise. A fast-casual dining experience offering Mediterranean breakfast, lunch, and dinner.</p>
+  <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
+  <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
   <h3> 900 Beacon St, Boston, MA 02215  
     <br>
                                        
