--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
   <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
   <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
-  <h3> 900 Beacon St, Boston, MA 02215  
+  <h3> 695 Washington St, Boston, MA 02111  
     <br>
                                        
   <a href=https://www.meimeiboston.com/">Mei Mei</a>                                   
