--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 </head> 
 <body>
   <h1>Hello, World!<h2>
-  <h2> Welcome to my first ever html website! I figured I'd share some of my favorites places I've discovered while going to school in Boston. Kinda like a food blog I guess... kinda, maybe?<h2>
+  <h3> Welcome to my first ever html web page! I figured I'd share some of my favorites places I've discovered while going to school in Boston.<h3>
+  <br><br>
   <h1>Places to visit in Boston<h1>
   <h2>Support Local Businesses!!<h2>
   <br>
