--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <h1>Hello, World!<h2>
   <h3> Welcome to my first ever html web page! I figured I'd share some of my favorites places I've discovered while going to school in Boston.<h3>
   <br>
-  <h1>Places to visit in Boston<h1>
+  <h1>Audrey's Favorite Places to visit in Boston<h1>
   <h2>Support Local Businesses!!<h2>
   <h2>Restaurants<h2>
   <h3> <h3>
@@ -11,17 +11,14 @@
   <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
     <br>
-   
   <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
   <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
   <h3> 695 Washington St, Boston, MA 02111  
-    <br>
-                                       
+    <br>                                
   <a href=https://www.meimeiboston.com/">Mei Mei</a>                                   
   <p> A sibling-founded restaurant and food truck catering business serving up creative Chinese-American cuisine made from locally sourced and sustainable ingredients.</p>
   <h3> 506 Park Drive, Boston, MA 02215  
     <br>
-   
   <h2>Shops<h2>
   <h3> <h3> 
    
