--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 </head> 
 <body>
   <h1>Hello, World!<h2>
-  <h3> Welcome to my first ever html web page! I figured I'd share some of my favorites places I've discovered while going to school in Boston.<h3>
+  <h3> Welcome to my first ever html web page! When I'm not in class or doing art I love going out to eat! I figured I'd share some of my favorites places I've discovered while going to school in Boston.<h3>
   <br>
   <h1>Audrey's Favorite Places to visit in Boston<h1>
   <h2>Support Local Businesses!!<h2>
-  <h2>Restaurants<h2>
+  <br>
   <h3> <h3>
   <a href="https://www.phinista.com/">Phinista</a>
   <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
