--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <h1>Audrey's Favorite Places to visit in Boston<h1>
   <h2>Support Local Businesses!!<h2>
   <br>
-  <h3> <h3>
+  <h3>Restaurants/Cafes<h3>
   <a href="https://www.phinista.com/">Phinista</a>
   <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
@@ -19,13 +19,17 @@
   <p> A sibling-founded restaurant and food truck catering business serving up creative Chinese-American cuisine made from locally sourced and sustainable ingredients.</p>
   <h3> 506 Park Drive, Boston, MA 02215  
     <br>
-  <h2>Shops<h2>
+  <h2>Boba!<h2>
   <h3> <h3> 
    
-  <a href=https://www.uvidashop.com/">Uvida Shop</a>
-  <p> Boston's first zero waste shop.
-  <h3>28 Atlantic Avenue North End, Boston, MA 02110
-                                       
+  <a href=https://www.teadocafe.com/">TeaDo</a>
+  <p> Located in Chinatown! 
+  <h3>8 Tyler Street, Boston, MA 02111
+     <br>
+  <h3>Gong Cha<h3>                                   
+  <a href=https://www.gongchausa.com/bubble-tea">menu</a>
+  <p> Recommend the Brown Sugar Milk tea!! 
+  <h3>8 Tyler Street, Boston, MA 02111                                  
  </body>
 </html>
 
