--- a/index.html
+++ b/index.html
@@ -8,20 +8,15 @@
   <br>
   <h3>Restaurants/Cafes<h3>
   <a href="https://www.phinista.com/">Phinista</a>
-  <p>Boston's Vietnamese cafe. Influenced by culture and Authenticity to provide quality and bold flavors. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
+  <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
     <br>
   <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
   <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
-  <h3> 695 Washington St, Boston, MA 02111  
-    <br>                                
-  <a href=https://www.meimeiboston.com/">Mei Mei</a>                                   
-  <p> A sibling-founded restaurant and food truck catering business serving up creative Chinese-American cuisine made from locally sourced and sustainable ingredients.</p>
-  <h3> 506 Park Drive, Boston, MA 02215  
+  <h3> 695 Washington St, Boston, MA 02111                       
     <br>
+                                        
   <h2>Boba!<h2>
-  <h3> <h3> 
-   
   <a href=https://www.teadocafe.com/">TeaDo</a>
   <p> Located in Chinatown! 
   <h3>8 Tyler Street, Boston, MA 02111
