--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 </head> 
 <body>
   <h1>Hello, World!<h2>
-  <h3> Welcome to my first ever html web page! When I'm not in class or doing art I love going out to eat! I figured I'd share some of my favorites places I've discovered while going to school in Boston.<h3>
+  <h3> Welcome to my first ever html web page! When I'm not in class or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3>
   <br>
   <h1>Audrey's Favorite Places to visit in Boston<h1>
   <h2>Support Local Businesses!!<h2>
   <br>
-  <h4>Restaurants/Cafes<h4>
+  <h2>Restaurants/Cafes<h2>
   <a href="https://www.phinista.com/">Phinista</a>
   <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
@@ -21,7 +21,7 @@
   <p> Located in Chinatown! 
   <h3>8 Tyler Street, Boston, MA 02111
      <br>
-  <h3>Gong Cha<h3>                                   
+  <h2>Gong Cha<h2>                                   
   <a href=https://www.gongchausa.com/bubble-tea">menu</a>
   <p> Recommend the Brown Sugar Milk tea!! 
   <h3>8 Tyler Street, Boston, MA 02111                                  
