--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <h1>Hello, World!<h2>
   <h3> Welcome to my first ever html web page! When I'm not in class or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3>
   <br>
-  <h1>Audrey's Favorite Places to visit in Boston<h1>
-  <h2>Support Local Businesses!!<h2>
+  <h1>Audrey's Favorite Places to visit in Boston:<h1>
+  <h2>Support Local Businesses:)<h2>
   <br>
-  <h2>Restaurants/Cafes<h2>
+  <h3>Restaurants/Cafes<h3>
   <a href="https://www.phinista.com/">Phinista</a>
   <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h3>96 Peterborough St, Boston, MA 02215<h3> 
@@ -22,9 +22,9 @@
   <p> Located in Chinatown! 
   <h3>8 Tyler Street, Boston, MA 02111
      <br>
-  <h2>Gong Cha<h2>                                   
+  <h3>Gong Cha<h3>                                   
   <a href=https://www.gongchausa.com/bubble-tea">menu</a>
-  <p> Recommend the Brown Sugar Milk tea!! 
+  <p> Highly recommend the Brown Sugar Milk tea!! 
   <h3>8 Tyler Street, Boston, MA 02111                                  
  </body>
 </html>
