--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
   <h2>Boba!<h2>
   <h3> <h3>                                      
   <a href=https://www.teadocafe.com/">TeaDo</a>
-  <p> Located in Chinatown! 
+  <p>  
   <h3>8 Tyler Street, Boston, MA 02111
-     <br>
-  <h3>Gong Cha<h3>                                   
-  <a href=https://www.gongchausa.com/bubble-tea">menu</a>
+     <br>                                  
+  <a href=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
   <p> Highly recommend the Brown Sugar Milk tea!! 
   <h3>8 Tyler Street, Boston, MA 02111                                  
  </body>
