--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <h2>Boba!<h2>
   <h3> <h3>                                      
   <a href=https://www.teadocafe.com/">TeaDo</a>
-  <p>  
+  <p>  Go to whenever I'm in Chinatown.
   <h3>8 Tyler Street, Boston, MA 02111
      <br>                                  
   <a href=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
   <p> Highly recommend the Brown Sugar Milk tea!! 
-  <h3>8 Tyler Street, Boston, MA 02111                                  
+  <h3>154 harvard Ave, Alston, MA 02134                                 
  </body>
 </html>
 
