--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h2>Boba!<h2>
   <h3> <h3>                                      
   <a href=https://www.teadocafe.com/">TeaDo</a>
-  <p>  Go to whenever I'm in Chinatown.
+  <p>  Go to boba place whenever I'm in Chinatown
   <h3>8 Tyler Street, Boston, MA 02111                                 
   <a href=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
   <p> Highly recommend the Brown Sugar Milk tea!! 
