--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-</head> 
-<body>
+<DOCTYPE html>
+<html>
+  </head> 
   <h1>Hello, World!<h2>
   <h3> Welcome to my first ever html web page! When I'm not in class or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3>
   <br>
