--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
   </head> 
   <h1>Hello, World!<h2>
-  <h3> Welcome to my first ever html web page! When I'm not in class or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3>
+  <h3> Welcome to my first ever html web page! When I'm not in class,working, or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3>
   <br>
-  <h1>Audrey's Favorite Places to visit in Boston:<h1>
-  <h2>Support Local Businesses:)<h2>
+  <h2>Audrey's Favorite Places to visit in Boston:<h2>
+  <h3>Support Local Businesses:)<h3>
   <br>
   <h2>Restaurants/Cafes<h2>
   <h3> <h3>  
   <a href="https://www.phinista.com/">Phinista</a>
   <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h4>96 Peterborough St, Boston, MA 02215<h4> 
+  <h3> <h3>
   <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
   <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
   <h4> 695 Washington St, Boston, MA 02111<h4>                       
