--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
   <h2>Audrey's Favorite Places to visit in Boston:<h2>
   <h3>Support Local Businesses:)<h3>
   <br>
-  <h2>Restaurants/Cafes<h2>
-  <h3> <h3>  
+  <h3>Restaurants/Cafes<h3>
+  <h4> <h4>
   <a href="https://www.phinista.com/">Phinista</a>
   <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h4>96 Peterborough St, Boston, MA 02215<h4> 
-  <h3> <h3>
+  <h4> <h4>
   <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
   <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
   <h4> 695 Washington St, Boston, MA 02111<h4>                       
     <br> <br>
   <h2> <h2>                                  
   <h2>Boba!<h2>
-  <h3> <h3>                                      
+  <h4> <h4>                                      
   <a href=https://www.teadocafe.com/">TeaDo</a>
   <p>  Go to boba place whenever I'm in Chinatown
   <h4>8 Tyler Street, Boston, MA 02111<h4>
   <a href=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
   <p> Highly recommend the Brown Sugar Milk tea!! 
-  <h3>154 harvard Ave, Alston, MA 02134                                 
+  <h4>154 harvard Ave, Alston, MA 02134<h4>                                 
  </body>
 </html>
 
