--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p> Highly recommend the Brown Sugar Milk tea!! 
   <h4>154 harvard Ave, Alston, MA 02134<h4>  
                                                 
- <button>click here<button>                                              
+ <button>click here<button/>                                              
  </body>
 </html>
 
