--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html>
   </head> 
   <h1>Hello, World!<h2>
-  <h3> Welcome to my first ever html web page! When I'm not in class,working, or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3>
-  <br>
-  <h2>Audrey's Favorite Places to visit in Boston:<h2>
-  <h3>Support Local Businesses:)<h3>
-  <br>
+  <h3> Welcome to my first ever html web page! When I'm not in class,working, or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3> <br>
+    <h2>Audrey's Favorite Places to visit in Boston:<h2>
+      <h3>Support Local Businesses:)<h3><br>
   <h2>Restaurants/Cafes<h2>
-  <h4> <h4>
-  <a href="https://www.phinista.com/">Phinista</a>
+  <h4> <a href="https://www.phinista.com/">Phinista</a> 
   <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <h4>96 Peterborough St, Boston, MA 02215<h4> 
   <h4> <h4>
@@ -27,7 +24,7 @@
   <p> Highly recommend the Brown Sugar Milk tea!! 
   <h4>154 harvard Ave, Alston, MA 02134<h4>  
                                                 
- <button>click here<button/>                                              
+ <button>random button<button/>                                              
  </body>
 </html>
 
