--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <h2>Audrey's Favorite Places to visit in Boston:<h2>
       <h3>Support Local Businesses:)<h3><br>
   <h2>Restaurants/Cafes<h2>
-  <h4> <a href="https://www.phinista.com/">Phinista</a> 
-  <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
-  <h4>96 Peterborough St, Boston, MA 02215<h4> 
+    <h4> <a href="https://www.phinista.com/">Phinista</a> 
+    <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
+  <address>
+    96 Peterborough St,<br>
+    Boston, MA 02215 
+  </address>
   <h4> <h4>
   <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
   <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
