--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
     Boston, MA 02111
   </addresss>                                      
     <br> <br>
-                                  
+  <h2> <h2>                             
   <h2>Boba!<h2>
   <h4> <h4>                                      
    <a href=https://www.teadocafe.com/">TeaDo</a>
-   <p>  Go to boba place whenever I'm in Chinatown
+    <p>  Go to boba place whenever I'm in Chinatown</p>
   <address>
     8 Tyler St. <br>
     Boston, MA 02111
   </adress>
-    <h4> <h4>
    <a href=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
-   <p> Highly recommend the Brown Sugar Milk tea!! 
+   <p> Highly recommend the Brown Sugar Milk tea!!</p>
   <address>
     154 harvard Ave
     Alston, MA 02134
