--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    <a href=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
    <p> Highly recommend the Brown Sugar Milk tea!!</p>
   <address>
-    154 harvard Ave
+    154 harvard Ave<br>
     Alston, MA 02134
   </address>                                                                                        
  </body>
