--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
-  </adress>
-    <br>
+  </adress><br>
    <a href=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
    <p> Highly recommend the Brown Sugar Milk tea!!</p>
   <address>
