--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <DOCTYPE html>
 <html>
   </head> 
-  <h1>Hello, World!<h2>
-  <h3> Welcome to my first ever html web page! When I'm not in class,working, or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3> <br>
-  <h2>Audrey's Favorite Places to visit in Boston:<h2>
+    <h1>Hello, World!<h2>
+    <h3> Welcome to my first ever html web page! When I'm not in class,working, or doing art I love going out to eat! I figured I'd share some of my favorites places in Boston.<h3> <br>
+    <h2>Audrey's Favorite Places to visit in Boston:<h2>
       <h3>Support Local Businesses:)<h3><br>
-        
-  <h2>Restaurants/Cafes<h2>
+  </head>
+  <body>
+    <h2>Restaurants/Cafes<h2>
     <h4> <a href="https://www.phinista.com/">Phinista</a> 
     <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <address>
     96 Peterborough St.<br>
     Boston, MA 02215 
   </address>
-  <h4> <h4>
-   <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
-   <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
+    <h4> <h4>
+    <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
+    <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
   <address> 
     695 Washington St.<br>
     Boston, MA 02111
   </addresss>                                      
-    <br> <br> 
-                                   
+    <br> <br>                                 
   <h2>Boba!<h2>
-  <h4> <h4>                                      
-   <a href=https://www.teadocafe.com/">TeaDo</a>
+    img src="img/coffee.jpg" alt="">                                        
+    <h4> <h4>                                      
+    <a href=https://www.teadocafe.com/">TeaDo</a>
     <p>  Go to boba place whenever I'm in Chinatown</p>
   <address>
     8 Tyler St.<br>
