--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </addresss>                                      
     <br> <br>                                 
   <h2>Boba!<h2>
-    img src="img/coffee.jpg" alt="">                                        
+    img src="img/coffee.jpg" alt="cafe sua da">                                        
     <h4> <h4>                                      
     <a href=https://www.teadocafe.com/">TeaDo</a>
     <p>  Go to boba place whenever I'm in Chinatown</p>
