--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     Boston, MA 02111
   </addresss>                                      
     <br> <br>                                 
-  <h2>Boba!<h2>                                        
+    <strong><h2>Boba!<h2></strong>                                        
     <h4> <h4>                                       
     <a href=https://www.teadocafe.com/">TeaDo</a>
-    <p>  Go to boba place whenever I'm in Chinatown</p>
+    <p>My go to boba place whenever I'm in Chinatown</p>
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
