--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h3>Support Local Businesses:)<h3><br>
   </head>
   <body>
-    <h2>Restaurants/Cafes<h2>
+    <strong><h2>Restaurants/Cafes<h2></strong>
     <h4> <a href="https://www.phinista.com/">Phinista</a> 
     <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <address>
