--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h3>Support Local Businesses:)<h3><br>
   </head>
   <body>
-    <strong><h2>Restaurants/Cafes<h2></strong>
+    <h2>Restaurants/Cafes<h2>
     <h4> <a href="https://www.phinista.com/">Phinista</a> 
     <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <address>
@@ -22,10 +22,10 @@
     Boston, MA 02111
   </addresss>                                      
     <br> <br>                                 
-    <strong><h2>Boba!<h2></strong>                                        
+    <h2>Boba!<h2>                                        
     <h4> <h4>                                       
     <a href=https://www.teadocafe.com/">TeaDo</a>
-    <p>My go to boba place whenever I'm in Chinatown</p>
+    <p>My <strong>go to</strong> boba place whenever I'm in Chinatown</p>
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
