--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Boston, MA 02215 
   </address>
     <h4> <h4>
-    <a href=https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
+    <a href="https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
     <p> Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
   <address> 
     695 Washington St.<br>
@@ -24,13 +24,13 @@
     <br> <br>                                 
     <h2>Boba!<h2>                                        
     <h4> <h4>                                       
-    <a href=https://www.teadocafe.com/">TeaDo</a>
+    <a href="https://www.teadocafe.com/menu-1">TeaDo</a>
     <p>My <strong>go to</strong> boba place whenever I'm in Chinatown</p>
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
   </adress><br>
-   <a href=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
+   <a href"=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
    <p> Highly recommend the Brown Sugar Milk tea!!</p>
   <address>
     154 harvard Ave<br>
