--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h3>Support Local Businesses:)<h3><br>
   </head>
   <body>
-    <h2>Restaurants/Cafes<h2>
+    <h2>Restaurants,Cafes , etc.<h2>
     <h4> <a href="https://www.phinista.com/">Phinista</a> 
     <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <address>
@@ -20,16 +20,14 @@
   <address> 
     695 Washington St.<br>
     Boston, MA 02111
-  </addresss>                                      
-    <br> <br>                                 
-    <h2>Boba!<h2>                                        
+  </address>                                                                            
     <h4> <h4>                                       
     <a href="https://www.teadocafe.com/menu-1">TeaDo</a>
-    <p>My <strong>go to</strong> boba place whenever I'm in Chinatown</p>
+    <p>My go to boba place whenever I'm in Chinatown</p>
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
-  </adress><br>
+  </adress>
    <a href"=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
    <p> Highly recommend the Brown Sugar Milk tea!!</p>
   <address>
