--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
     <address> 
     66 Hereford St.<br>
     Boston, MA 02115
-  </address>      
-    <a href="https://www.teadocafe.com/menu-1">TeaDo</a>
-    <p>My go to boba place whenever I'm in Chinatown</p>
+  </address>   
+    <h4> <h4>
+    <h4> <a href="https://www.teadocafe.com/menu-1">TeaDo</a>
+    <p> My go to boba place whenever I'm in Chinatown.</p>
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
   </adress>
    <h4> <h4> 
-   <a href"=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
+   <h4> <a href"=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
    <p> Highly recommend the Brown Sugar Milk tea!!</p>
   <address>
     154 harvard Ave<br>
