--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     Boston, MA 02115
   </address>   
    <h4> <h4> 
-   <h4> <a href"=https://www.gongchausa.com/bubble-tea">Gong Cha</a>
+   <h4> <a href="https://www.gongchausa.com/bubble-tea">Gong Cha</a>
    <p> Highly recommend the Brown Sugar Milk tea!!</p>
   <address>
     154 harvard Ave<br>
