--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </address>   
    <h4> <h4> 
    <h4> <a href="https://www.beantownphoandgrill.com/menu.aspx">Beantown Pho and Grill</a>
-   <p> Pho is my all time favorite food. Perfect for a cold rainy day.<p>
+   <p> Pho is my all time favorite food. Perfect for a cold rainy day.</p>
   <address>
    272 Newbury St.<br>
    Boston, MA 02116
@@ -49,6 +49,8 @@
     8 Tyler St.<br>
     Boston, MA 02111
   </adress>
+      
+      <P> This is a growing list so I'll try and update it as I continue to try new places:)</p>
  </body>
 </html>
  
