--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     Boston, MA 02111
   </adress>
       
-  <h4> <h4>
-  <h4> <P> This is a growing list so I'll try and update it as I continue to try new places:)</p>
+  <h3> <h3>
+  <h3> <p> This is a growing list so I'll try and update it as I continue to try new places:)</p>
  </body>
 </html>
  
