--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
-  </adress>
-      
+  </adress> <br>   
   <h3> <h3>
   <h3> <p> This is a growing list so I'll try and update it as I continue to try new places:)</p>
  </body>
