--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     96 Peterborough St.<br>
     Boston, MA 02215 
   </address>
-    <h4> <h4>
-    <h4> <a href="https://www.dumplingcafe.com/">Dumpling Cafe</a>                                   
+    <h4> <a href="https://www.dumplingcafe.com/">Dumpling Cafe</a><h4>                                   
     <p>Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
   <address> 
     695 Washington St.<br>
