--- a/index.html
+++ b/index.html
@@ -19,30 +19,26 @@
   <address> 
     695 Washington St.<br>
     Boston, MA 02111
-  </address>                                                                            
-    <h4> <h4> 
-    <h4> <a href="https://santouka-usa.com/">Santouka Ramen</a>  
+  </address>                                                                           
+    <h4> <a href="https://santouka-usa.com/">Santouka Ramen</a><h4> 
     <p> I've been here about 5+ times now starting to lose track...<p>
   <address> 
     66 Hereford St.<br>
     Boston, MA 02115
-  </address>   
-   <h4> <h4> 
-   <h4> <a href="https://www.beantownphoandgrill.com/menu.aspx">Beantown Pho and Grill</a>
+  </address>    
+   <h4> <a href="https://www.beantownphoandgrill.com/menu.aspx">Beantown Pho and Grill</a><h4>
    <p> Pho is my all time favorite food. Perfect for a cold rainy day.</p>
   <address>
    272 Newbury St.<br>
    Boston, MA 02116
   </address>
-   <h4> <h4>
-   <h4> <a href="https://www.gongchausa.com/bubble-tea">Gong Cha</a>
+   <h4> <a href="https://www.gongchausa.com/bubble-tea">Gong Cha</a><h4>
    <p> Highly recommend the Brown Sugar Milk tea!!</p>
   <address>
     154 harvard Ave<br>
     Alston, MA 02134
-  </address>   
-    <h4> <h4>
-    <h4> <a href="https://www.teadocafe.com/menu-1">TeaDo</a>
+  </address>  
+    <h4> <a href="https://www.teadocafe.com/menu-1">TeaDo</a><h4>
     <p> My go to boba place whenever I'm in Chinatown.</p>
   <address>
     8 Tyler St.<br>
