--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     8 Tyler St.<br>
     Boston, MA 02111
   </adress> 
+    <br>
+    <p> This is a growing list so stay tuned as I can keep adding to it:)</p>
  </body>
 </html>
  
