--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
-  </adress><br>
+  </adress>
+  <br><br>
     <p> This is a growing list so stay tuned as I can keep adding to it:)</p>
  </body>
 </html>
