--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     Boston, MA 02111
   </adress>
   <br> <br>
-    <big><p> This is a growing list so stay tuned as I can keep adding to it:)</p></big>
+    <p> This is a growing list so stay tuned as I can keep adding to it:)</p>
  </body>
 </html>
  
