--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <!-- mobile friendly -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Hello World</title>
+</head>
+<body>
+
   </head> 
     <h1>Hello, World!<h1>
     <h3> Welcome to my first ever html web page! When I'm not in class, working, or doing art I love going out to eat! I figured I'd share some of my favorite places in Boston.<h3> <br>
