--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>Support Local Businesses:)<h3><br>
   <body>
     <h2>Restaurants, Cafes, etc.<h2>
+    <img alt="cafe sua da" src="https://images.squarespace-cdn.com/content/v1/5d2cf499669038000114edd1/1607649439329-2G5UHLUPOFWTYTQX83OJ/ke17ZwdGBToddI8pDm48kLkXF2pIyv_F2eUT9F60jBl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0iyqMbMesKd95J-X4EagrgU9L3Sa3U8cogeb0tjXbfawd0urKshkc5MgdBeJmALQKw/fav.jpg?format=300w">
     <h4> <a href="https://www.phinista.com/">Phinista</a> 
     <p>Boston's Vietnamese cafe. Phinsta is the combination of Phin (a style of brewed coffee) and well, your barista.</p>
   <address>
