--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
     96 Peterborough St.<br>
     Boston, MA 02215 
   </address>
-    <h4> <a href="https://www.dumplingcafe.com/">Dumpling Cafe</a><h4>                                   
+    <h4> <a href="https://www.dumplingcafe.com/">Dumpling Cafe</a><h4>  
+    <img alt="soup dumplings" src="https://www.dumplingcafe.com/images/slide2.jpg" width="300">
     <p>Taiwanese, Chinese cafe that serves some of the best xiao long bao (soup dumplings).</p>
   <address> 
     695 Washington St.<br>
     Boston, MA 02111
   </address>                                                                           
     <h4> <a href="https://santouka-usa.com/">Santouka Ramen</a><h4> 
+    <img alt="ramen" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR01TrdGlk9Wh6ENn1bwoGRgjGd4e0ARueBJQ&usqp=CAU" width="300">
     <p> I've been here about 5+ times now starting to lose track...<p>
   <address> 
     66 Hereford St.<br>
