--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     Alston, MA 02134
   </address>  
     <h4> <a href="https://www.teadocafe.com/menu-1">TeaDo</a><h4>
-    <img alt="boba" scr="https://raster-static.postmates.com/?url=https%3A%2F%2Fitems-static.postmates.com%2Fuploads%2Fmedia%2F15e99eab-9b64-4982-bed7-155226310e3b%2Foriginal.jpeg%3Fv%3D63755152986&quality=85&w=320&h=0&mode=auto&format=&v=4" width="300">
-    <p> My go to boba place whenever I'm in Chinatown.</p>
+    <img alt="boba" scr="https://images.squarespace-cdn.com/content/v1/52c8791de4b0268360dde5d6/1510178827648-PBPOZFP39FJTTC9EDC2Y/ke17ZwdGBToddI8pDm48kHvwtBfTBdLF-DdWBYrA38h7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1URbUMfBaeZjL016k5nlAa4mVcQa41F1ltMj7ydDQ2nToKecyZ0ZMz4VVYb7syoOhLQ/IMG_5626.jpg" width="300">
+  <p> My go to boba place whenever I'm in Chinatown.</p>
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
