--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     Alston, MA 02134
   </address>  
     <h4> <a href="https://www.teadocafe.com/menu-1">TeaDo</a><h4>
-    <img alt="boba" scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1jK1VSmjkKaGOqeir0W2QWKMLV5AOsEGomA&usqp=CAU" width="300">
+    <img alt="boba" scr="https://d1ralsognjng37.cloudfront.net/8cc7cac2-af41-4a40-873a-165ae94f1574.jpeg" width="300">
     <p> My go to boba place whenever I'm in Chinatown.</p>
   <address>
     8 Tyler St.<br>
