--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <h1>Hello, World!<h1>
     <h3> Welcome to my first ever html web page! When I'm not in class, working, or doing art I love going out to eat! I figured I'd share some of my favorite places in Boston.<h3> <br>
-    <h2>Audrey's Favorite Places to visit in Boston:<h2>
+    <h2>Audrey's Favorite restaurants, cafes, places, etc. to visit in Boston:<h2>
   <body>
-    <h2>Restaurants, Cafes, etc.<h2>
     <h4> <a href="https://www.phinista.com/">Phinista</a>
     <br>
     <img alt="cafe sua da" src="https://images.squarespace-cdn.com/content/v1/5d2cf499669038000114edd1/1581775902037-86D05GV81JTTSF0MY7Y7/ke17ZwdGBToddI8pDm48kLkXF2pIyv_F2eUT9F60jBl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0iyqMbMesKd95J-X4EagrgU9L3Sa3U8cogeb0tjXbfawd0urKshkc5MgdBeJmALQKw/Cafe+Sua+Da-01.jpg?format=300w" width="300">
