--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello, World!<h1>
     <h3> Welcome to my first ever html web page! When I'm not in class, working, or doing art I love going out to eat! I figured I'd share some of my favorite places in Boston.<h3> <br>
-    <h2>Audrey's Favorite restaurants, cafes, places, etc. to visit in Boston:<h2>
+    <h2>Audrey's Favorite restaurants, cafes, places, etc:<h2>
   <body>
     <h4> <a href="https://www.phinista.com/">Phinista</a>
     <br>
