--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Hello, World!<h1>
 <header>
   
-<p> Welcome to my first ever html web page! When I'm not in class, working, or doing art I love going out to eat! I figured I'd share some of my favorite places in Boston.<h3> <br>
+<h3> Welcome to my first ever html web page! When I'm not in class, working, or doing art I love going out to eat! I figured I'd share some of my favorite places in Boston.<h3> 
     
 <h2>Audrey's Favorite restaurants, cafes, places, etc:<h2>
 
