--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
 <h3> Welcome to my first ever html web page! When I'm not in class, working, or doing art I love going out to eat! I figured I'd share some of my favorite places in Boston.<h3> 
     
-<h2>Audrey's Favorite restaurants, cafes, places, etc:<h2>
+<h2>Audrey's Favorite restaurants, cafes, etc:<h2>
 
    <a href="https://www.phinista.com/">Phinista</a>
      <br>
