--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
   
    <br>
   
-    <a href="https://www.teadocafe.com/menu-1">TeaDo</a>
-      <br>
-    <img alt="boba" scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3aAUTFur5S0HHYRFVV_pCAz3Dl-7Jf_POoQ&usqp=CAU" width="300">
-    <p> My go to boba place whenever I'm in Chinatown.</p>
+   <a href="https://www.teadocafe.com/menu-1">TeaDo</a>
+     <br>
+   <img alt="boba" src="https://images.dailyhive.com/20191119104317/food_with_howie.jpeg" width="300">
+   <p> My go to boba place whenever I'm in Chinatown.</p>
   <address>
     8 Tyler St.<br>
     Boston, MA 02111
