--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   
    <a href="https://www.teadocafe.com/menu-1">TeaDo</a>
      <br>
-   <img alt="boba" src="https://images.dailyhive.com/20191119104317/food_with_howie.jpeg" width="300">
+   <img alt="boba" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRgcRG7Rcxuad5Xy0O3OmohoJARoMM5fHZeg&usqp=CAU" width="300">
    <p> My go to boba place whenever I'm in Chinatown.</p>
   <address>
     8 Tyler St.<br>
