--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   
   <br>
       
-    <p> This is a growing list so stay tuned as I can keep adding to it:)</p>
+    <h2> This is a growing list so stay tuned as I can keep adding to it:)<h2>
       
  </body>
 </html>  
