--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   
 <h3> Welcome to my first ever html web page! When I'm not in class, working, or making art I love going out to eat! I figured I'd share some of my favorite places in Boston.<h3> 
     
-<h2>Audrey's Favorite restaurants, cafes, etc:<h2>
+<img alt="boston skyline" src="https://www.vhv.rs/dpng/d/171-1715171_boston-skyline-png-boston-city-skyline-drawing-transparent.png">
+  
+  <h2>Audrey's Favorite restaurants, cafes, etc:<h2>
 
    <a href="https://www.phinista.com/">Phinista</a>
      <br>
