--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   
   <br>
       
-    <h2> This is a growing list so stay tuned as I can keep adding to it:)<h2>
+    <h2> This is a growing list so stay tuned as I keep adding to it:)<h2>
       
  </body>
 </html>  
